kubernetes/networking/python-web-app-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: python-web-app-allow
  namespace: python-web-app

spec:
  podSelector:
    matchLabels:
      app: python-web-app

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: allowed
      ports:
        - protocol: TCP
          port: 8080
